--- a/JavaExplanation-main/index.html
+++ b/JavaExplanation-main/index.html
@@ -3,8 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>JavaScriptの技術解説</title>
+    <meta
+    name="viewport"
+    content="width=device-width, initial-scale=1.0, user-scalable=yes" />
 </head>
 <body>
-    <h1>Hello World!</h1>
+    <h1>JavaScriptの技術解説</h1>
 </body>
 </html>
