css、フォントとbody

--- a/JavaExplanation-main/index.html
+++ b/JavaExplanation-main/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ja">
+<html lang="ja"><!-- 日本語のページの場合はlang属性をjaに設定 -->
 <head>
     <meta charset="UTF-8">
     <title>JavaScriptの技術解説</title>
