--- a/JavaExplanation-main/index.html
+++ b/JavaExplanation-main/index.html
@@ -1,13 +1,28 @@
 <!DOCTYPE html>
 <html lang="ja"><!-- 日本語のページの場合はlang属性をjaに設定 -->
-<head>
-    <meta charset="UTF-8">
+    <head>
+        <meta charset="UTF-8">
     <title>JavaScriptの技術解説</title>
     <meta
     name="viewport"
     content="width=device-width, initial-scale=1.0, user-scalable=yes" />
-</head>
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" />
+    <link
+    rel="stylesheet"
+    href="https://fonts.googleapis.com/css2?family=Yusei+Magic&display=swap" />
+    <link rel="stylesheet" href="main.css" />
+    </head>
+
 <body>
     <h1>JavaScriptの技術解説</h1>
+    <p>
+        <strong>JavaScript</strong>とは、主にWebページに動きをつけるためのプログラミング言語です。ボタンに触れると形や色が変わる機能や、スライドショー、ポップアップウィンドウ、ログインなど、様々な機能の実装に用いられます。<br>
+        <strong>JavaScript</strong>以外の言語でもサイト自体は制作できますが、<strong>JavaScript</strong>を取り入れる事で視認性や利便性が向上し、使いやすいサイトに仕上がります。<br>
+        <strong>JavaScript</strong>はシステム・アプリ・ゲーム開発などにも使われます。本記事ではそんな<strong>JavaScript</strong>について解説します。
+    </p>
+
+
 </body>
 </html>
