--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
     <h1>JavaScriptの技術解説</h1>
     <p>
-        <strong>JavaScript</strong>とは、主にWebページに動きをつけるためのプログラミング言語です。ボタンに触れると形や色が変わる機能や、スライドショー、ポップアップウィンドウ、ログインなど、様々な機能の実装に用いられます。<br>
+        <strong>JavaScript</strong>とは、主にWebページに動きをつけるためのプログラミング言語です。ボタンに触れると形や色が変わる機能や、スライドショー、ポップアップウィンドウ、ログインなど、様々な機能の実装に用いられます。
         <strong>JavaScript</strong>以外の言語でもサイト自体は制作できますが、<strong>JavaScript</strong>を取り入れる事で視認性や利便性が向上し、使いやすいサイトに仕上がります。<br>
         <strong>JavaScript</strong>はシステム・アプリ・ゲーム開発などにも使われます。本記事ではそんな<strong>JavaScript</strong>について解説します。
     </p>
