html css ナビリンク

--- a/index.html
+++ b/index.html
@@ -24,6 +24,16 @@
         本記事ではそんな<strong>JavaScript</strong>について解説します。
     </p>
 
+    <div class="navlink">
+        <nav class="gnav">
+        <ul class="gnav-list">
+        <li class="gnav-item"><a href="#aaaa">AAAA</a></li>
+        <li class="gnav-item"><a href="#bbbb">BBBB</a></li>
+        <li class="gnav-item"><a href="#cccc">CCCC</a></li>
+        <li class="gnav-item"><a href="#dddd">DDDD</a></li>
+        </ul>
+        </nav>
+    </div>
 
 </body>
 </html>
