--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
     <div class="navlink">
         <nav class="gnav">
         <ul class="gnav-list">
-        <li class="gnav-item">1.<a href="#aaaa">AAAA</a></li>
-        <li class="gnav-item">2.<a href="#bbbb">BBBB</a></li>
-        <li class="gnav-item">3.<a href="#cccc">CCCC</a></li>
-        <li class="gnav-item">4.<a href="#dddd">DDDD</a></li>
+        <li class="gnav-item"><a href="#aaaa">AAAA</a></li>
+        <li class="gnav-item"><a href="#bbbb">BBBB</a></li>
+        <li class="gnav-item"><a href="#cccc">CCCC</a></li>
+        <li class="gnav-item"><a href="#dddd">DDDD</a></li>
         </ul>
         </nav>
     </div>
