--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     </head>
 
 <body>
+    
     <h1>JavaScriptの技術解説</h1>
     <p>
         <strong>JavaScript</strong>とは、主にWebページに動きをつけるためのプログラミング言語です。ボタンに触れると形や色が変わる機能や、スライドショー、ポップアップウィンドウ、ログインなど、様々な機能の実装に用いられます。
@@ -27,7 +28,7 @@
     <div class="navlink">
         <nav class="gnav">
         <ul class="gnav-list">
-        <li class="gnav-item"><a href="#aaaa">AAAA</a></li>
+        <li class="gnav-item"><a href="#aaaa">JavaScriptとは</a></li>
         <li class="gnav-item"><a href="#bbbb">BBBB</a></li>
         <li class="gnav-item"><a href="#cccc">CCCC</a></li>
         <li class="gnav-item"><a href="#dddd">DDDD</a></li>
@@ -35,5 +36,15 @@
         </nav>
     </div>
 
+    <h2 id="aaaa">JavaScriptとは</h2>
+    <p>
+        JavaScriptは、動的なWebページを作るためのプログラミング言語の一つです。1996年頃、Internet Explorer 3.0に搭載されたことをきっかけに、急速に普及しました。代表的な機能は、ボタンを押すと画面に別ウィンドウが開く「ポップアップウィンドウ」や、画像が自動送りされる「スライドショー」などの多様なアニメーションです。その他、システムやアプリ開発などのバックエンドでも用いられています。
+    </p>
+
+    <h3>JavaScriptの特徴</h3>
+    <p>
+        JavaScriptはエディタとブラウザの環境さえ整っていれば、初心者でも今日から使用できる言語です。ソースコードを編集するためのエディタにコードを記述し、Google ChromeやInternet Explorerなどインターネットを閲覧するためのブラウザで表示します。サーバーを介さずに動きが確認できるため、初心者でも取り入れやすい言語と言えます。また、JavaScriptはエンジニアからも人気が高い言語の一つです。世界的な開発プラットフォーム「GitHub」においても、利用者が最も多い言語となっています。<br>
+        JavaScriptの特徴は、ブラウザだけで動作する点です。サーバーを介さずにブラウザで動作する言語を、クライアントサイドスクリプトとも言います。また、汎用性が高く、Webページの表現に関わるフロントサイドと、データベース管理などを行うサーバーサイドの両方で使用できます。
+    </p>
 </body>
 </html>
