--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" />
     <link
     rel="stylesheet"
-    href="https://fonts.googleapis.com/css2?family=Yusei+Magic&display=swap" />
+    href="https://fonts.google.com/noto/specimen/Noto+Sans+JP?subset=japanese&noto.script=Hira" />
     <link rel="stylesheet" href="main.css" />
     </head>
 
