--- a/index.html
+++ b/index.html
@@ -5,13 +5,8 @@
     <title>JavaScriptの技術解説</title>
     <meta
     name="viewport"
-    content="width=device-width, initial-scale=1.0, user-scalable=yes" />
-    <link
-    rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" />
-    <link
-    rel="stylesheet"
-    href="https://fonts.google.com/noto/specimen/Noto+Sans+JP?subset=japanese&noto.script=Hira" />
+    content="width=device-width, initial-scale=1.0, user-scalable=no" />
+    
     <link rel="stylesheet" href="main.css" />
     </head>
 
