--- a/index.html
+++ b/index.html
@@ -41,5 +41,37 @@
         JavaScriptはエディタとブラウザの環境さえ整っていれば、初心者でも今日から使用できる言語です。ソースコードを編集するためのエディタにコードを記述し、Google ChromeやInternet Explorerなどインターネットを閲覧するためのブラウザで表示します。サーバーを介さずに動きが確認できるため、初心者でも取り入れやすい言語と言えます。また、JavaScriptはエンジニアからも人気が高い言語の一つです。世界的な開発プラットフォーム「GitHub」においても、利用者が最も多い言語となっています。<br>
         JavaScriptの特徴は、ブラウザだけで動作する点です。サーバーを介さずにブラウザで動作する言語を、クライアントサイドスクリプトとも言います。また、汎用性が高く、Webページの表現に関わるフロントサイドと、データベース管理などを行うサーバーサイドの両方で使用できます。
     </p>
+
+    <h3>JavaScriptとJavaの違い</h3>
+    <p>
+        JavaScriptとJavaは名称こそ似ていますが、用途・開発者・動作環境が異なります。JavaScriptがWebページの見栄えを向上させる目的で取り入れる言語であるのに対して、JavaはWebページに限らず、アプリケーションや業務システム開発にも用いられます。<br>
+        JavaScriptは1995年頃、ネットスケープコミュニケーションズのブレンダン・アイク氏によって開発されました。対してJavaは、当時すでに注目されていたプログラミング言語で、開発元はサン・マイクロシステムズです。両者の業務提携により、JavaScriptの初期の名称であったLiveScriptから、JavaScriptへ変更されました。<br>
+        動作環境に関しては、JavaScriptはブラウザだけで動作しますが、Javaはコンピュータ処理のためにコンパイルと呼ばれる翻訳作業を行ったあと、Java仮想マシンというソフトウェア上で実行する必要があります。<br>
+        このように、JavaScriptとJavaは、まったくの別物であることが分かります。
+    </p>
+
+    <h2 id="bbbb">JavaScriptの基本構文</h2>
+    <p>
+        ここでは、JavaScriptでの「変数の宣言」、「データ型」、「関数の宣言」、「条件式」、「ループ」について解説します。
+    </p>
+
+    <h3>変数の宣言</h3>
+    <p>JavaScriptでは、<code>var</code>, <code>let</code>, <code>const</code>を使って変数を宣言します。</p>
+        <pre><code>var x = 10;
+            let y = 20;
+            const z = 30;</code></pre>
+        
+    <h3>データ型</h3>
+    <p>JavaScriptにはいくつかの基本的なデータ型があります。</p>
+        <ul>
+            <li>数値 (Number)</li>
+            <li>文字列 (String)</li>
+            <li>ブール値 (Boolean)</li>
+            <li>配列 (Array)</li>
+            <li>オブジェクト (Object)</li>
+            <li>未定義 (Undefined)</li>
+            <li>ヌル(Null)</li>
+        </ul>
+
 </body>
 </html>
