--- a/index.html
+++ b/index.html
@@ -63,14 +63,14 @@
         
     <h3>データ型</h3>
     <p>JavaScriptにはいくつかの基本的なデータ型があります。</p>
-        <ul>
-            <li>数値 (Number)</li>
-            <li>文字列 (String)</li>
-            <li>ブール値 (Boolean)</li>
-            <li>配列 (Array)</li>
-            <li>オブジェクト (Object)</li>
-            <li>未定義 (Undefined)</li>
-            <li>ヌル(Null)</li>
+        <ul class="data-list">
+            <li class="data-item"></li>数値 (Number)</li>
+            <li class="data-item"></li>文字列 (String)</li>
+            <li class="data-item"></li>ブール値 (Boolean)</li>
+            <li class="data-item"></li>配列 (Array)</li>
+            <li class="data-item"></li>オブジェクト (Object)</li>
+            <li class="data-item"></li>未定義 (Undefined)</li>
+            <li class="data-item"></li>ヌル(Null)</li>
         </ul>
 
 </body>
