--- a/index.html
+++ b/index.html
@@ -73,5 +73,23 @@ const z = 30;</code></pre>
             <li class="data-item"></li>ヌル(Null)</li>
         </ul>
 
+    <h3>関数の宣言</h3>
+    <p>JavaScriptでは、関数を定義する方法は複数あります。</p>
+        <pre><code>// 関数宣言
+function greet() {
+    console.log('Hello, world!');
+}
+
+// 関数式
+const greet = function() {
+    console.log('Hello, world!');
+};
+
+// アロー関数
+const greet = () => {
+    console.log('Hello, world!');
+};</code></pre>
+
+
 </body>
 </html>
