--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <nav class="gnav">
         <ul class="gnav-list">
         <li class="gnav-item"><a href="#aaaa">JavaScriptとは</a></li>
-        <li class="gnav-item"><a href="#bbbb">BBBB</a></li>
+        <li class="gnav-item"><a href="#bbbb">JavaScriptの基本構文</a></li>
         <li class="gnav-item"><a href="#cccc">CCCC</a></li>
         <li class="gnav-item"><a href="#dddd">DDDD</a></li>
         </ul>
@@ -64,13 +64,13 @@ const z = 30;</code></pre>
     <h3>データ型</h3>
     <p>JavaScriptにはいくつかの基本的なデータ型があります。</p>
         <ul class="data-list">
-            <li class="data-item"></li>数値 (Number)</li>
-            <li class="data-item"></li>文字列 (String)</li>
-            <li class="data-item"></li>ブール値 (Boolean)</li>
-            <li class="data-item"></li>配列 (Array)</li>
-            <li class="data-item"></li>オブジェクト (Object)</li>
-            <li class="data-item"></li>未定義 (Undefined)</li>
-            <li class="data-item"></li>ヌル(Null)</li>
+            <li>数値 (Number)</li>
+            <li>文字列 (String)</li>
+            <li>ブール値 (Boolean)</li>
+            <li>配列 (Array)</li>
+            <li>オブジェクト (Object)</li>
+            <li>未定義 (Undefined)</li>
+            <li>ヌル(Null)</li>
         </ul>
 
     <h3>関数の宣言</h3>
