--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <ul class="gnav-list">
         <li class="gnav-item"><a href="#aaaa">JavaScriptとは</a></li>
         <li class="gnav-item"><a href="#bbbb">JavaScriptの基本構文</a></li>
-        <li class="gnav-item"><a href="#cccc">CCCC</a></li>
+        <li class="gnav-item"><a href="#cccc">Node.jsとは</a></li>
         <li class="gnav-item"><a href="#dddd">DDDD</a></li>
         </ul>
         </nav>
@@ -129,6 +129,42 @@ while (i < 5) {
     console.log(i);
     i++;
 }</code></pre>
+
+    <h2 id="cccc">Node.jsとは</h2>
+    <p>
+        「JavaScriptの勉強してたらみんなNode.jsの存在を前提に話が進む。そもそもNode.jsとは何なのか。なぜ必要なのか」<br>
+        といった疑問を解消することを目的としています。
+    </p>
+
+    <h3>JavaScriptと他の言語の違い</h3>
+    <p>
+        ということで、ブラウザ上で動作するJavaScriptはOSの機能にアクセスできないようになっています。<br>
+        ですがOSの機能へ全くアクセスができないのでは些か不便なので、ブラウザが限定的にOSの機能へのアクセスを仲介してくれています。
+    </p>
+
+    <h3>Node.jsについて</h3>
+    <p>
+        Node.jsは、ブラウザ上という制限された環境でしか動けなかったJavaScriptを,PythonやRubyのようにパソコン上で動作させるためのランタイム環境です。<br>
+        Node.jsをインストールすると「node.exe」ができます。node.exeはJavaScriptコードを実行するアプリケーション＝JavaScript実行環境です。
+        Node.jsではJavaScriptでOSの機能にアクセスするプログラムを組むことができます。
+        ブラウザ上で動作していたときはできなかった自由なファイルの読み書きやネットワーク通信などのOSの機能を扱えるのです。
+    </p>
+
+    <h2 id="dddd">TypeScriptの特徴・導入</h2>
+    <p>
+        TypeScriptはJavaScriptを拡張して開発されました。Googleの標準開発言語に承認されてから世界的に注目を集めています。<br>
+        JavaScriptはバグが発生しやすいという大きな問題を抱えていました。その問題を解消するために開発されたのがTypeScriptです。JavaScriptとの互換性が高いのも特徴の1つです。<br>
+        ここではTypeScriptの概要、メリット、TypeScriptの導入などを紹介します。
+    </p>
+
+    <h3>TypeScriptの概要</h3>
+    <p>
+        TypeScriptは、JavaScriptを拡張して開発された新しいプログラミング言語です。2012年10月にMicrosoftによって公開されました。TypeScriptで書いたコードをコンパイルするとJavaScriptのコードへと変換されるため、JavaScriptの開発環境や実行環境があればすぐに使うことが出来ます。
+        JavaScriptとの互換性の高さと、大規模の開発でもエラーを防ぐよう設計されている点が特徴です。Googleの標準開発言語に承認されてからは世界的に注目を集めており、将来性がある言語の1つといえます。
+        ここからはJavaScriptとの違いについて詳しく解説していきます。
+    </p>
+
+
 
 </body>
 </html>
