--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <li class="gnav-item"><a href="#aaaa">JavaScriptとは</a></li>
         <li class="gnav-item"><a href="#bbbb">JavaScriptの基本構文</a></li>
         <li class="gnav-item"><a href="#cccc">Node.jsとは</a></li>
-        <li class="gnav-item"><a href="#dddd">DDDD</a></li>
+        <li class="gnav-item"><a href="#dddd">TypeScriptの特徴・導入</a></li>
         </ul>
         </nav>
     </div>
