--- a/index.html
+++ b/index.html
@@ -138,8 +138,10 @@ while (i < 5) {
 
     <h3>JavaScriptと他の言語の違い</h3>
     <p>
-        ということで、ブラウザ上で動作するJavaScriptはOSの機能にアクセスできないようになっています。<br>
-        ですがOSの機能へ全くアクセスができないのでは些か不便なので、ブラウザが限定的にOSの機能へのアクセスを仲介してくれています。
+        まずはJavaScriptと他のプログラミング言語の違いを知っておく必要があります。
+        JavaScriptはChromeやFirefoxといった「ブラウザ上」で動作するプログラミング言語です。対してPythonやRubyのような一般的なプログラミング言語は通常「パソコン上」で動作します。<br>
+        このことが生み出す違いは、OSの機能にアクセスできるかどうかです。「OSの機能」とは例えばファイルの読み書きや、ネットワーク通信などの機能のことです。パソコン上で動作するアプリケーション（PythonやRubyなどを含む）ではこれらの機能を扱うことができます。それに対し、ブラウザ上で動作するプログラム（JavaScript）がOSの機能へアクセスできてしまうとセキュリティ的に問題があります。<br>
+        なので、ブラウザ上で動作するJavaScriptはOSの機能にアクセスできないようになっています。ですがOSの機能へ全くアクセスができないのでは些か不便なので、ブラウザが限定的にOSの機能へのアクセスを仲介してくれています。
     </p>
 
     <h3>Node.jsについて</h3>
