--- a/index.html
+++ b/index.html
@@ -156,17 +156,48 @@ while (i < 5) {
     <p>
         TypeScriptはJavaScriptを拡張して開発されました。Googleの標準開発言語に承認されてから世界的に注目を集めています。<br>
         JavaScriptはバグが発生しやすいという大きな問題を抱えていました。その問題を解消するために開発されたのがTypeScriptです。JavaScriptとの互換性が高いのも特徴の1つです。<br>
-        ここではTypeScriptの概要、メリット、TypeScriptの導入などを紹介します。
+        ここではTypeScriptの概要、JavaScriptとの違い、メリット、などを紹介します。
     </p>
 
     <h3>TypeScriptの概要</h3>
     <p>
         TypeScriptは、JavaScriptを拡張して開発された新しいプログラミング言語です。2012年10月にMicrosoftによって公開されました。TypeScriptで書いたコードをコンパイルするとJavaScriptのコードへと変換されるため、JavaScriptの開発環境や実行環境があればすぐに使うことが出来ます。
-        JavaScriptとの互換性の高さと、大規模の開発でもエラーを防ぐよう設計されている点が特徴です。Googleの標準開発言語に承認されてからは世界的に注目を集めており、将来性がある言語の1つといえます。
+        JavaScriptとの互換性の高さと、大規模の開発でもエラーを防ぐよう設計されている点が特徴です。Googleの標準開発言語に承認されてからは世界的に注目を集めており、将来性がある言語の1つといえます。<br>
         ここからはJavaScriptとの違いについて詳しく解説していきます。
     </p>
 
+    <h3>TypeScriptとJavaScriptの違い</h3>
+    <p>
+        TypeScriptは、JavaScriptと同じ構文ならびにライブラリが使用できるため、違いがわかりづらいですが、大きな違いは型付けにあります。<br>
+        JavaScriptは実行時にデータ型を決める動的型付けです。動的型付けには、実行時にデータ型が自動で決まるため実行するまでエラーの存在に気付きにくく、バグが起こりやすいという問題点がありました。この問題を解決するため、TypeScriptではあらかじめ変数の型を定義する静的型付けを採用しました。
+        例えば、従来のJavaScriptであればnullやundefinedで「Uncaught TypeError: Cannot read property *** of undefined」のエラーが出力されますが、TypeScriptはコンパイラオプションで変数をチェックできるため、未然にエラーを発見できます。<br>
+        エラーを防止できるTypeScriptはグループで開発する際に有利なため、規模の大きなWeb開発で利用されるケースが増えています。これからTypeScriptかJavaScriptのどちらを勉強すべきか悩んだ際には、TypeScriptを選ぶのがおすすめです。
+    </p>
 
+    <h3>TypeScriptのメリット</h3>
+    <h4>JavaScriptより短く読みやすいコードが書ける可能性がある</h4>
+    <p>
+        TypeScriptは、オブジェクト指向型言語として開発されています。かつてJavaScriptでは使えなかったクラスの生成が可能なため、JavaScriptよりもシンプルにソースコードを記述できます。
+        コードが冗長で読みづらいと、バグの原因になることがあります。シンプルなコードは書きやすく、バグの回避につながるため大きなメリットといえるでしょう。なお現在ではJavaScriptもクラスが使えるようになっています。
+    </p>
 
+    <h4>JavaScriptとの互換性がある</h4>
+    <p>
+        TypeScriptは、JavaScriptのフレームワークやライブラリを使用できるため、JavaScriptの開発環境や実行環境があれば構築せずにそのまま使えます。JavaScriptで作られたファイルを呼び出して使うことも可能です。
+        また、コンパイルで、TypeScriptファイルからJavaScriptファイルに変換されます
+    </p>
+
+    <h4>エラーを防止できる</h4>
+    <p>
+        TypeScriptは、変数のデータ型をコード内で宣言できる静的型付けの言語です。型と値が異なるとコンパイルエラーが発生するため、バグを防止できます。
+        JavaScriptではプログラムを稼働させるまでエラーに気づきにくい問題がありましたが、TypeScriptではコンパイル時にエラーに気づける仕組みとなっています。
+    </p>
+
+    <h4>JavaScriptの知識があれば覚えやすい</h4>
+    <p>
+        通常、新しい言語の学習には数ヶ月程度を要しますが、JavaScriptを扱ったことがある方であれば簡単に使い始められます。
+    </p>
+
+    <p>本コンテンツの作成時間（HTML/CSSの設計・実装を含む）：約15時間</p>
 </body>
 </html>
